HTTP_Routing/2.15_HTTPRedirect_HostnamePort/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-hostname-port-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /host

      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: tea.f5bnk.com
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: /port

      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 8443
            statusCode: 301

    - matches:
        - path:
            type: PathPrefix
            value: /both

      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: tea.f5bnk.com
            port: 8443
            statusCode: 301
